A.F....... [ZBX-5074] redesigned action configuration page (Eduard)
..F....... [ZBX-1357] updated Brazilian Portuguese, French, Japanese, Russian and Ukrainian translations; thanks to Zabbix translators (Richlv)
..F....... [ZBXNEXT-1019] updated jQuery to 1.7.2 and jQuery UI to 1.8.20 (Vedmak)
..F....... [ZBXNEXT-829] added Zabbix server availability check (Vedmak)

Bug fixes:
..F....... [ZBX-4930] improved translations for import error messages (Vedmak)
..F....... [ZBX-5253] fixed color of disabled host link on search page (Vedmak)
A.F....... [ZBX-5281] fixed error when create item without delay_flex field specified (Vedmak)
..F....... [ZBX-3284] fixed messages for discovery rule manipulations (Vedmak)
..F....... [ZBX-3003] added support for suffixes in map label trigger expression macro function parameter (Vedmak)
..F....... [ZBX-5070] fixed SQL error on logout with HTTP authentication (Toms)
..F....... [ZBX-4741] fixed authentication configuration page still uses "profiles" table (Toms)
..F....... [ZBX-3637] fixed "IT Services availability report" generates wrong weekly timing (Toms)
..F....... [ZBX-3637] fixed notification report does not take daylight saving time into account (Toms)
..F....... [ZBX-3782] fixed {HOSTNAME} macro not working in map labels trigger expression macro (Vedmak)
..F....... [ZBX-5236] fixed some map element rendering ignoring the "Problem display" map option (Pavels)
A......... [ZBX-5252] fixed multiple level templated application inheritance (Pavels)
..F....... [ZBX-2183] fixed change column in latest data for items with 'unixtime' units (Vedmak)
A.F....... [ZBX-2055] added flexible intervals and time periods validation (Vedmak)
..F....... [ZBX-5045] fixed audit error message when deleting global macros (Pavels)
..F....... [ZBX-3387] fixed incorrect gui language is shown as active in user profile (Vedmak)
..F....... [ZBX-2046] fixed paging can work incorrectly if elements count changes (Vedmak)